# RSSRipple

./: .coveragerc  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTION.md  DESIGN.md  Dockerfile  README.md  README_CN.md  check_llm_config.py  coverage.json  docker-compose.test-all-in-one.yml  docker-compose.test-distributed.yml  docker-compose.test.yml  docker-compose.yml  overview.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: cd-publish.yml  ci-fast.yml  ci-strict.yml  docker-publish.yml
.slim/deepwork/: exa-metadata-repo.md  metadata-search-agent.md
.specify/extensions/: .registry
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
app/: config.py  database.py  main.py
app/api/v1/: agents.py  audio_works.py  channels.py  dashboard.py  decisions.py  downloaders.py  filters.py  movies.py  resources.py  series.py  system_settings.py  tasks.py  works.py
app/clients/: downloader.py  imdb_client.py  mock_downloader.py  rss_parser.py  tmdb_client.py  transmission.py  tvdb_client.py
app/models/: __init__.py  agent.py  agent_run.py  agent_suggestion.py  agent_work.py  app_setting.py  audio_work.py  channel.py  channel_raw_title_mapping.py  download_task.py  downloader.py  episode.py  eval_job.py  file_resource.py  filter.py  ground_truth.py  metadata_cache.py  movie.py  pending_decision.py  series.py
app/schemas/: __init__.py  agent.py  audio_work.py  channel.py  common.py  dashboard.py  download_task.py  downloader.py  episode.py  file_resource.py  filter.py  filter_dsl.py  movie.py  pending_decision.py  series.py
app/scripts/: __init__.py  dedup_metadata.py
app/services/: agent_service.py  feed_analyzer.py  fetch_service.py  filter_engine.py  fts.py  metadata_agent.py  metadata_audio.py  metadata_audio_resolver.py  metadata_dedup.py  metadata_episode_reconcile.py  metadata_exa_fallback.py  metadata_failure.py  metadata_prompts.py  metadata_repository.py  metadata_resource_meta.py  metadata_search_agent.py  metadata_service.py  metadata_source_io.py  metadata_sources.py  metadata_title_index.py  metadata_wiki_classify.py  metadata_wiki_judge.py  metadata_wiki_query.py  metadata_wikipedia_client.py  resource_cleanup.py  resource_parser.py  runtime_config.py  scheduler.py  settings_service.py  submission_guard.py  task_queue.py  text_normalizer.py  title_cleaner.py  title_parser.py  url_tools.py
app/static/: index.html
app/static/assets/: index-1JkBOsNC.js  index-A08J_uji.js  index-A5Yd-U51.css  index-B55TljZK.js  index-BG2o20UE.js  index-BIRUrUgP.js  index-BMaYwgjd.js  index-BdgR5MIG.css  index-BftZdgMj.js  index-BmZekbou.js  index-BvGO2CoB.css  index-BzonfTRv.js  index-CHAyMkGS.js  index-CJQ3Pz5j.js  index-C_buwF5-.js  index-CaFzG5us.js  index-CpdL7535.js  index-Cpteb0TH.js  index-CusLtBjg.js  index-DKxaGqGW.js  index-DckU1JDj.css  index-DeFptwFq.js  index-FEt3PuRV.css  index-GaHQiZ_w.js  index-YWBGX6EG.css  index-nzalE_Zn.js  index-y2t_jNFM.js  index-yRcN9AcM.js
app/utils/: download_paths.py  time.py
docker/transmission/custom-cont-init.d/: 01-create-download-dirs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
githooks/: pre-commit
scripts/: repair_jibaketa_parse.py  season_title_migration.py  wikipedia_poster_backfill.py
specs/001-rssripple/: data-model.md  plan.md  spec.md  tasks.md
tests/: conftest.py  web-ui-functional-cases.md
tests/api/: conftest.py  test_agents.py  test_api_coverage1.py  test_api_coverage2.py  test_api_coverage3.py  test_channels.py  test_dashboard.py  test_dashboard_extra.py  test_decisions.py  test_downloaders.py  test_error_handling.py  test_movies.py  test_resources.py  test_series.py  test_settings.py  test_tasks.py  test_tasks_extra.py  test_works.py
tests/integration/: Dockerfile  INVENTORY.md  conftest.py  requirements-test.txt  test_agent_pipeline.py  test_channel_delete_and_token.py  test_channel_real_feeds.py  test_channel_workflow.py  test_downloader_pipeline.py  test_e2e.py  test_e2e_pipeline.py  test_fetch_with_real_feed.py  test_filter_metadata.py  test_metadata_agent_accuracy.py  test_metadata_pipeline.py  test_metadata_search_agent_integration.py  test_openrouter_analyze.py  test_rss_subscription.py  test_task_queue.py  test_title_extraction.py  test_tmdb_dataset.py  test_torrent_lifecycle.py
tests/midscene/: .env.example  agents-lifecycle.yaml  channels-lifecycle.yaml  dashboard.yaml  downloaders-lifecycle.yaml  midscene-config.yaml  resources-metadata.yaml  series-movies.yaml
tests/unit/: conftest.py  test_agent_service.py  test_download_paths.py  test_feed_analyzer.py  test_fetch_service.py  test_filter_engine.py  test_metadata_agent.py  test_metadata_dedup.py  test_metadata_search_agent.py  test_metadata_service.py  test_mock_downloader.py  test_resource_cleanup.py  test_resource_parser.py  test_rss_parser.py  test_scheduler.py  test_schemas.py  test_submission_guard.py  test_task_queue.py  test_title_cleaner.py  test_title_cleaner_extra.py  test_title_parser.py  test_transmission_client.py
(+89 files in other folders)
