[project]
name = "rssripple"
version = "0.1.0"
description = "Automated RSS subscription downloader with intelligent filtering and LLM-assisted decisions"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy[asyncio]==2.0.35",
    "aiosqlite==0.20.0",
    "pydantic>=2.11.2",
    "pydantic-settings>=2.5.2",
    "httpx>=0.28.1",
    "feedparser==6.0.11",
    "transmission-rpc==7.0.6",
    "apscheduler==3.10.4",
    "openai>=1.52.0,<2",
    "python-dotenv==1.0.1",
    "thefuzz[speedup]==0.22.1",
    "openrouter>=0.10.0",
    "redis>=5.0",
    # Optional database drivers (auto-selected via DATABASE_URL scheme)
    "asyncpg>=0.30.0",
    "exa-py>=2.15.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
    "bencodepy>=0.9.5",
    "fakeredis>=2.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "timeout: mark a test with a timeout (seconds)",
    "integration: mark a test as an integration test",
    "asyncio: mark a test as an asyncio test",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://pypi.org/simple/"
default = true
