[project]
name = "rssripple"
version = "0.1.0"
description = "Automated RSS subscription downloader with intelligent filtering and LLM-assisted decisions"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy[asyncio]==2.0.35",
    "aiosqlite==0.20.0",
    "pydantic>=2.11.2",
    "pydantic-settings>=2.5.2",
    "httpx>=0.28.1",
    "feedparser==6.0.11",
    "transmission-rpc==7.0.6",
    "apscheduler==3.10.4",
    "openai>=1.52.0,<2",
    "python-dotenv==1.0.1",
    "opencc-python-reimplemented>=0.1.7",
    "openrouter>=0.10.0",
    "redis>=5.0",
    # Optional database drivers (auto-selected via DATABASE_URL scheme)
    "asyncpg>=0.30.0",
    "exa-py>=2.15.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "Wikipedia-API>=0.15.0",
    "pyarrow>=17.0.0",
    "jinja2>=3.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
    "bencodepy>=0.9.5",
    "fakeredis>=2.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "timeout: mark a test with a timeout (seconds)",
    "integration: mark a test as an integration test",
    "asyncio: mark a test as an asyncio test",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# Tests are intentionally looser than app/: allow compact fixtures,
# post-sys.path imports, long sample payloads, mock-class idioms.
"tests/**/*.py" = [
    "E501",  # long lines in fixtures / sample RSS/torrent payloads
    "E402",  # imports intentionally placed after sys.path / env setup
    "E702",  # compact fixture setup: `ch_id = _uuid(); rid = _uuid()`
    "N805",  # `self_inner` in nested `class _Ctx` async ctx-managers
    "N806",  # PascalCase mock-patch aliases (`MockCls`)
]
# LLM prompt templates hold few-shot example strings verbatim; line-length
# rewraps would corrupt the samples passed to the model.
"app/services/metadata_agent.py" = ["E501"]
"app/services/metadata_prompts.py" = ["E501"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://pypi.org/simple/"
default = true
